<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnvironmentalMonitoring</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="tabhost_tab00_title">Environment Target</string>
    <string name="tabhost_tab01_title">History Check</string>
    <string name="tabhost_tab02_title">Manual Operation</string>    
    <string name="tabhost_tab03_title">Setting</string>
    
    <string name="widget_tab00_text">Environment Target</string>
    <string name="widget_tab01_text">History Check</string>
    <string name="widget_tab02_text">Manual Operation</string>    
    <string name="widget_tab03_text">Setting</string>
    
    <!-- ********************国际化************************************ -->
    <string name="please_wait">Please wait</string>
    <string name="noNetwork">No network connection.</string>
    <string name="prompt">Prompt</string>
    
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget password?</string>
    <string name="recode_password">Recode Password</string>
    <string name="setting_ip">Setting IP</string>
    <string name="login_failed">Login failed</string>
    <string name="register_failed">Username has existed</string>
    <string name="register_success">Register success</string>
    
    <string name="username">Username</string>
    <string name="username_hint">Please input username</string>
    <string name="username_not_empty">Username canot empty</string>
    <string name="password">Password</string>
    <string name="password_hint">Please input password</string>
    <string name="password_not_empty">Password canot empty</string>
    <string name="email">Email</string>
    <string name="email_hint">Please input phone number</string>
    <string name="email_not_empty">phone number canot empty</string>
    
    <string name="ip_name">Ip</string>
    <string name="port_name">Port</string>
    <string name="input_ip_addr">Please input IP address</string>
    <string name="input_port_addr">Please input Port</string>
    <string name="invalid_ip">Invalid IP address</string>
    <string name="invalid_email">Invalid email address</string>
    
    <string name="again">Please input password again</string>
    <string name="set_psw">Set Password</string>
    <string name="yifasong">Sent</string>
    <string name="fasong">Send</string>
    <string name="yanzhengma">Verification code</string>
    <string name="find_password">Find password</string>
    <string name="find_password_failed">This account not exist</string>
    <string name="find_password_success">Verification code has sent, please check!</string>
    
    
    <string name="sensor_type">Sensor Type</string>
    <string name="time_quantum">Time Quantum</string>
    <string name="check">Check</string>
    
    <string name="language_seting">Language Setting</string>
    <string name="auto_control">Auto Control</string>
    <string name="pm25_threshold_value_setting">Formaldehyde threshold value</string>
    <string name="co2_threshold_value_setting">PM2.5 threshold value</string>
    <string name="light_threshold_value_setting">CO2 threshold value</string>
    <string name="air_threshold_value_setting">Light threshold value</string>
    <string name="soil_threshold_value_setting">Temperature threshold value</string>
    <string name="sound_threshold_value_setting">Sound threshold value</string>
    <color name="black">#ff000000</color>
    
    <string name="not_show_next_time">Show user study screen next time</string>
    
    <string name="open">Open</string>
    <string name="close">Close</string>
    
    <string name="water_pump">Water Pump</string>
    <string name="blower">blower</string>
    <string name="road_lamp">Road Lamp</string>
    <string name="buzzer">Buzzer</string>
    <string name="current_status_open">Current Status:Open</string>
    <string name="current_status_close">Current Status:Close</string>
    
    <string name="pm25_title">Formaldehyde</string>
    <string name="co2_title">PM2.5</string>
    <string name="light_title">CO2</string>
    <string name="air_title">Light</string>
    <string name="soil_title">Temperature</string>
    <string name="air_tmper_title">Sound</string>
    <string name="air_humid_title">Air Humidity</string>
    <string name="soil_tmper_title">Soil Temperature</string>
    <string name="soil_humid_title">Soil Humidity</string>
    <string name="warn">Warning</string>
    
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancle</string>
    
    <string name="set_value">Set Value:</string>
    
    <string name="dialog_min">Min：</string>
    <string name="dialog_max">Max：</string>
    <string name="dialog_min_hint">Please input the min value!</string>
    <string name="dialog_max_hint">Please input the max value!</string>
    
    <string name="warn_big">too much</string>
    <string name="warn_small">too small</string>
    <string name="warn_normal">normal</string>
    
    <string name="exit_dialog_msg">Sure to Exit?</string>
    
    <string name="dialog_reconnect">Reconnect</string>
    <!-- ********************国际化************************************ -->
</resources>
