<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_ip"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/second_title"
        android:textColor="@color/white"/>
    
    <LinearLayout 
        android:layout_margin="@dimen/margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:textSize="@dimen/third_title">
        
        <TextView 
            android:layout_width="@dimen/button_width"            
            android:layout_height="wrap_content"
            android:text="@string/ip_name"
            android:gravity="start"
            android:textColor="@color/white"/>
        
        <EditText 
            android:id="@+id/dialog_ip"
            android:layout_width="@dimen/login_edittext_width"
            android:layout_height="wrap_content"
            android:hint="@string/input_ip_addr"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:textSize="@dimen/third_title">
        
        <TextView 
            android:layout_width="@dimen/button_width"            
            android:layout_height="wrap_content"
            android:text="@string/port_name"
            android:textSize="@dimen/forth_title"
            android:gravity="start"
            android:textColor="@color/white"/>
        
        <EditText 
            android:id="@+id/dialog_port"
            android:layout_width="@dimen/login_edittext_width"
            android:layout_height="wrap_content"
            android:hint="@string/input_port_addr"/>
    </LinearLayout>
</LinearLayout>