<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_big" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/second_title"
        android:text="@string/find_password"
        android:textColor="@color/white"/>
	    
	<!-- <EditText 
        android:id="@+id/find_psw__account"
        android:singleLine="true"        
        android:layout_width="@dimen/login_edittext_width"
        android:layout_height="@dimen/button_height"
        android:hint="@string/username_hint"
        android:background="@drawable/username_edit_bg"
        android:layout_marginTop="@dimen/margin"
        android:textSize="@dimen/third_title"/> -->
    
    <EditText 
        android:id="@+id/find_psw_phone"
        android:singleLine="true"
        android:layout_marginTop="@dimen/margin"
        android:layout_width="@dimen/login_edittext_width"
        android:layout_height="@dimen/button_height"
        android:hint="@string/email_hint"
        android:background="@drawable/email_edit_bg"
        android:textSize="@dimen/third_title"
        android:inputType="phone"/>
    
    <LinearLayout 
        android:layout_width="@dimen/login_edittext_width"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <EditText
            android:id="@+id/yanzhengma"
            android:layout_width="@dimen/yanzhengma_width"
            android:layout_height="@dimen/button_height"
            android:hint="@string/yanzhengma"
            android:singleLine="true"
            android:textSize="@dimen/third_title"
            android:gravity="center" />
        
        <Space 
            android:layout_width="@dimen/margin_big"
            android:layout_height="wrap_content"/>
        <Button 
            android:id="@+id/send"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/fasong"
            android:textSize="@dimen/third_title"
            android:gravity="center"/>

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="@dimen/login_edittext_width"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:gravity="center">
        
        <Button 
            android:id="@+id/find_psw_confirm"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/dialog_confirm"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:background="@drawable/blue_textview_bg"/>
        
        <Space 
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"/>
        <Button 
            android:id="@+id/find_psw_cancel"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/dialog_cancel"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@drawable/red_textview_bg"/>
    </LinearLayout>
   	    

</LinearLayout>
