<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_title"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/second_title"
        android:layout_marginTop="@dimen/margin"
        android:textColor="@color/white"/>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin"
        android:textSize="@dimen/third_title">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_min_textview"
            android:text="@string/dialog_min"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:textColor="@color/white"/>
        
        <EditText 
            android:layout_height="wrap_content"
            android:id="@+id/dialog_min"
            android:hint="@string/dialog_min_hint"
            android:layout_width="@dimen/login_edittext_width"
            />
    </LinearLayout>
        
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin"
        android:textSize="@dimen/third_title">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_max_textview" 
            android:text="@string/dialog_max"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:textColor="@color/white"/>
        
        <EditText 
            android:layout_height="wrap_content"
            android:id="@+id/dialog_max"
            android:hint="@string/dialog_max_hint"
            android:layout_width="@dimen/login_edittext_width"
            />
    </LinearLayout>
        
    
    
        
    
</LinearLayout>
