<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
		android:layout_marginBottom="@dimen/margin"
		android:paddingTop="@dimen/margin"
        android:orientation="vertical" >
    </LinearLayout> 
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
        	android:layout_marginLeft="@dimen/margin"        	        
	        android:text="@string/sensor_type"
	        android:textSize="@dimen/third_title"
	        android:singleLine="true"/>
        <Spinner
            android:id="@+id/sensor_type_spinner"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_height"
            android:textSize="@dimen/third_title"
            android:layout_marginLeft="@dimen/margin"
            android:layout_gravity="center_vertical"
            android:spinnerMode="dialog"/>
        
        <TextView
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"	         
	        android:layout_marginLeft="@dimen/margin_big"	        
	        android:text="@string/time_quantum"
	        android:layout_gravity="center_vertical"
	        android:textSize="@dimen/third_title"
	        android:singleLine="true"/>
        
        <Spinner
            android:id="@+id/time_spinner"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_height"
            android:textSize="@dimen/third_title"
            android:layout_marginLeft="@dimen/margin"
            android:layout_gravity="center_vertical"
            android:spinnerMode="dialog" />
        
        <Button
	       	android:id="@+id/check_button"
	       	android:layout_width="@dimen/button_width"
	        android:layout_height="@dimen/button_height"
	        android:background="@drawable/btn_blue"
	        android:layout_marginLeft="@dimen/margin_big"
	        android:textColor="@color/white"
	        android:textSize="@dimen/third_title"
	        android:text="@string/check"
	        android:gravity="center"/>
    </LinearLayout>
    
    
		
</LinearLayout>