<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
<LinearLayout 
   	    android:layout_width="@dimen/tabhost_three_width" 
   	    android:layout_height="wrap_content"
   	    android:background="@drawable/dialog_bg"
   	    android:orientation="vertical"
   	    android:gravity="center"
   	    android:layout_gravity="center"
   	    android:padding="@dimen/padding">
   	    
        <LinearLayout
	        android:id="@+id/language_layout" 
	        android:layout_width="@dimen/shezhi_item_width" 
	        android:layout_height="@dimen/button_height"
	        android:layout_marginTop="@dimen/margin"
	        android:gravity="center"
	        android:background="@drawable/setting_item_bg_btn">
		    <TextView
		        android:layout_weight="60"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/language_seting"
	            android:textSize="@dimen/third_title"
	            android:textColor="@color/black"
	            android:layout_gravity="center_vertical|start"
	            android:layout_marginStart="@dimen/margin"
	            android:layout_marginLeft="@dimen/margin"/>
		    <ImageView 
		        android:layout_width="@dimen/button_height" 
		        android:layout_height="@dimen/button_height"
		        android:layout_gravity="center_vertical|end" 
		        android:background="@drawable/goto_normail"/>
		</LinearLayout>
		   
		
		
        
		<LinearLayout	         
	        android:layout_width="@dimen/shezhi_item_width" 
	        android:layout_height="@dimen/button_height"
	        
	        android:gravity="center"
	        android:background="@drawable/setting_item_bg_btn">
		    <TextView
		        android:layout_marginStart="@dimen/margin"
		        android:layout_marginLeft="@dimen/margin"
		        android:layout_weight="60"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/auto_control"
	            android:textSize="@dimen/third_title"
	            android:textColor="@color/black"
	            android:layout_gravity="center_vertical|start"/>
		    <CheckBox
		       android:id="@+id/autoControlCheckBox"
		       android:layout_width="@dimen/tabhost_three_checkbox_width"
		       android:layout_height="@dimen/button_height"
		       android:layout_gravity="center_vertical"		       
		       android:button="@null"
		       android:background="@drawable/slide_check_box_btn" />
		</LinearLayout>
		
		<!-- 
        <LinearLayout	         
	        android:layout_width="match_parent" 
	        android:layout_height="50dip"
	        
	        android:layout_marginStart="10dip"
	        android:layout_marginEnd="10dip"
	        
	        android:background="@drawable/setting_item_bg_btn">
		    <TextView
		        android:layout_marginStart="15dip"
		        android:layout_weight="60"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/not_show_next_time"
	            android:textSize="23sp"
	            android:textColor="@color/black"
	            android:layout_gravity="center_vertical|start"/>
		    <CheckBox
		       android:id="@+id/showStudyCheckBox"
		       android:layout_width="90dip"
		       android:layout_height="50dip"
		       android:layout_gravity="center_vertical"		       
		       android:button="@null"
		       android:background="@drawable/slide_check_box_btn" />
		</LinearLayout>
		 -->
		 
        <LinearLayout
	        android:id="@+id/pm25_setting_layout" 
	        android:layout_width="@dimen/shezhi_item_width" 
	        android:layout_height="@dimen/button_height"
	        
	        android:gravity="center"
	        android:background="@drawable/setting_item_bg_btn">
		    <TextView
		        android:layout_marginStart="@dimen/margin"
		        android:layout_marginLeft="@dimen/margin"
		        android:layout_weight="60"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/pm25_threshold_value_setting"
	            android:textSize="@dimen/third_title"
	            android:textColor="@color/black"
	            android:layout_gravity="center_vertical|start"/>
		    <ImageView 
		        android:layout_width="@dimen/button_height" 
		        android:layout_height="@dimen/button_height"
		        android:layout_gravity="center_vertical|end" 
		        android:background="@drawable/goto_normail"/>
		</LinearLayout>
		
        <LinearLayout
	        android:id="@+id/co2_setting_layout" 
	        android:layout_width="@dimen/shezhi_item_width" 
	        android:layout_height="@dimen/button_height"
	        
	        android:gravity="center"
	        android:background="@drawable/setting_item_bg_btn">
		    <TextView
		        android:layout_marginStart="@dimen/margin"
		        android:layout_marginLeft="@dimen/margin"
		        android:layout_weight="60"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/co2_threshold_value_setting"
	            android:textSize="@dimen/third_title"
	            android:textColor="@color/black"
	            android:layout_gravity="center_vertical|start"/>
		    <ImageView 
		        android:layout_width="@dimen/button_height" 
		        android:layout_height="@dimen/button_height"
		        android:layout_gravity="center_vertical|end" 
		        android:background="@drawable/goto_normail"/>
		</LinearLayout>
        
		<LinearLayout
	        android:id="@+id/light_setting_layout" 
	        android:layout_width="@dimen/shezhi_item_width" 
	        android:layout_height="@dimen/button_height"
	        
	        android:gravity="center"
	        android:background="@drawable/setting_item_bg_btn">
		    <TextView
		        android:layout_marginStart="@dimen/margin"
		        android:layout_marginLeft="@dimen/margin"
		        android:layout_weight="60"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/light_threshold_value_setting"
	            android:textSize="@dimen/third_title"
	            android:textColor="@color/black"
	            android:layout_gravity="center_vertical|start"/>
		    <ImageView 
		        android:layout_width="@dimen/button_height" 
		        android:layout_height="@dimen/button_height"
		        android:layout_gravity="center_vertical|end" 
		        android:background="@drawable/goto_normail"/>
		</LinearLayout>
        
		<LinearLayout
	        android:id="@+id/air_setting_layout" 
	        android:layout_width="@dimen/shezhi_item_width" 
	        android:layout_height="@dimen/button_height"
	        
	        android:gravity="center"
	        android:background="@drawable/setting_item_bg_btn">
		    <TextView
		        android:layout_marginStart="@dimen/margin"
		        android:layout_marginLeft="@dimen/margin"
		        android:layout_weight="60"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/air_threshold_value_setting"
	            android:textSize="@dimen/third_title"
	            android:textColor="@color/black"
	            android:layout_gravity="center_vertical|start"/>
		    <ImageView 
		        android:layout_width="@dimen/button_height" 
		        android:layout_height="@dimen/button_height"
		        android:layout_gravity="center_vertical|end" 
		        android:background="@drawable/goto_normail"/>
		</LinearLayout>
        
		<LinearLayout
	        android:id="@+id/soil_setting_layout" 
	        android:layout_width="@dimen/shezhi_item_width" 
	        android:layout_height="@dimen/button_height"
	        
	        android:gravity="center"
	        android:background="@drawable/setting_item_bg_btn">
		    <TextView
		        android:layout_marginStart="@dimen/margin"
		        android:layout_marginLeft="@dimen/margin"
		        android:layout_weight="60"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/soil_threshold_value_setting"
	            android:textSize="@dimen/third_title"
	            android:textColor="@color/black"
	            android:layout_gravity="center_vertical|start"/>
		    <ImageView 
		        android:layout_width="@dimen/button_height" 
		        android:layout_height="@dimen/button_height"
		        android:layout_gravity="center_vertical|end" 
		        android:background="@drawable/goto_normail"/>
		</LinearLayout>
		
		<LinearLayout
	        android:id="@+id/air_tmper_setting_layout" 
	        android:layout_width="@dimen/shezhi_item_width" 
	        android:layout_height="@dimen/button_height"
			android:layout_marginBottom="@dimen/margin"
	        
	        android:gravity="center"
	        android:background="@drawable/setting_item_bg_btn">
		    <TextView
		        android:layout_marginStart="@dimen/margin"
		        android:layout_marginLeft="@dimen/margin"
		        android:layout_weight="60"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/sound_threshold_value_setting"
	            android:textSize="@dimen/third_title"
	            android:textColor="@color/black"
	            android:layout_gravity="center_vertical|start"/>
		    <ImageView 
		        android:layout_width="@dimen/button_height" 
		        android:layout_height="@dimen/button_height"
		        android:layout_gravity="center_vertical|end" 
		        android:background="@drawable/goto_normail"/>
		</LinearLayout>
        
        
</LinearLayout>
</ScrollView>